# Dump-1-Newbie

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  Program.cs
App/Properties/: AssemblyInfo.cs
Application/: CMakeLists.txt  main.cpp
Application/Header/Material/: DefaultMaterial.hpp
Application/Header/Mesh/: Geometry.hpp
Application/Header/Test/: test.hpp
Application/Headers/: test.hpp
Application/Material/: DefaultMaterial.cpp  DefaultMaterial.hpp
Application/Mesh/: Geometry.cpp  Geometry.hpp
Application/Scene/: Scene.cpp  Scene.hpp
Application/Script/: RotateScript.cpp  RotateScript.hpp
Application/Source/: main.cpp
Application/Source/Test/: TestCamera.cpp  TestMeshModel.cpp  TestMeshSquare.cpp  TestMeshTriangle.cpp  TestTexture.cpp  TestTransform.cpp  TestWindow.cpp
Application/Sources/: main.cpp  test_camera.cpp  test_mesh_model.cpp  test_mesh_quad.cpp  test_mesh_triangle.cpp  test_transform.cpp  test_triangle.cpp  test_window.cpp
Application/Test/: Test.hpp  TestGraphics.cpp  TestInteraction.cpp  TestPhysics.cpp
Core/: CMakeLists.txt
Core/Common/: Component.cpp  Component.hpp  Debug.hpp  GameObject.cpp  GameObject.hpp  Script.cpp  Script.hpp  Transform.cpp  Transform.hpp
Core/Graphics/: Camera.cpp  Camera.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Custom/: CMakeLists.txt
Custom/Properties/: AssemblyInfo.cs
Custom/Script/: RotateScript.cs
Editor/: CMakeLists.txt  Program.cs
Editor/Properties/: AssemblyInfo.cs
Engine/: CMakeLists.txt  Engine.hpp
Engine/Common/: Component.hpp  GameObject.cpp  GameObject.hpp  ManagedObject.hpp  Script.cpp  Script.hpp  Time.cpp  Time.hpp  Transform.cpp  Transform.hpp  Utility.hpp  Window.cpp  Window.hpp
Engine/Core/: CameraObject.cpp  CameraObject.hpp  Component.cpp  Component.hpp  Debug.hpp  DrawableObject.cpp  DrawableObject.hpp  Object.cpp  Object.hpp  Resource.cpp  Resource.hpp  Scene.cpp  Scene.hpp  Script.cpp  Script.hpp  Time.cpp  Time.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp
Engine/Graphics/: Camera.cpp  Camera.hpp  Geometry.cpp  Geometry.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Engine/Header/: Camera.hpp  Engine.hpp  Model.hpp  Object.hpp  Renderer.hpp  Transform.hpp
Engine/Headers/: Camera.hpp  Debug.hpp  Engine.hpp  Material.hpp  Mesh.hpp  Object.hpp  Renderer.hpp  Transform.hpp  Window.hpp
Engine/Interaction/: Window.cpp  Window.hpp
Engine/Source/: Camera.cpp  Debug.cpp  Material.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Texture.cpp  Transform.cpp  Window.cpp
Engine/Sources/: Camera.cpp  Debug.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Transform.cpp  Window.cpp
Resource/Shader/: test_graphics_vert.glsl  test_texture_fragmentshader.glsl  test_texture_vertexshader.glsl
Resources/Shaders/: test_mesh_model_vertexshader.glsl  test_transform_vertexshader.glsl
